--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "snmp"
   ],
   "author": "metinogurlu",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "asn1js": "^2.0.22"
+  }
 }
