--- a/config/config.json
+++ b/config/config.json
@@ -2,11 +2,11 @@
     "devices": [
         {
             "name":"exagate-pdu",
-            "port":40001
+            "port":"40000-40100"
         },
         {
             "name": "exagate-pdu",
-            "port":40002
+            "port": 40101
         }
     ]
-}
+} 
